--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="game">
         <div class="dashBorde">
 <span>X</span>
-<h1 class="title">game</h1>
+<h1 class="title">vs</h1>
 <span>O</span>
         </div>
         <div class="main">
