--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
     9
 </div>
         </div>
+        <h1 id="foot">
+            devloped by FOUAD_DEV
+        </h1>
     </div>
 </body>
 </html>
